2006-10-26  Joe Neeman  <joeneeman@gmail.com>

	* lily/system.cc (get_paper_system): 
	* lily/paper-book.cc (systems): 
	move most of the backwards compatibility stuff into
	Paper_book::systems

	* Documentation/topdocs/NEWS.tely: add 2 entries for the
	page breaking stuff

	* Documentation/user/page.itely: remove time-scaled-music
	bug for the Page_turn_engraver

	* lily/paper-book.cc (set_system_penalty): backwards
	compatibility (breakbefore) for the old page breaker

2006-10-25  Graham Percival  <gpermus@gmail.com>

	* Diocumentation/user/instrument-notation.itely: added more
	info about stanzas; thanks Geoff!

	* Documentation/user/ {basic, advanced}: small fixes from
	mailist.

	* THANKS: add some bug reporters.

2006-10-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-context-properties.scm (all-user-translation-properties):
	noteToFretFunction: Add.

	* scm/define-grobs.scm (all-grob-descriptions): FretBoard: use
	fret-diagram-interface (WAS: fret-board-interface).  Fixes build.

2006-10-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-name.cc (dos_to_posix): Help std::string.copy with
	trailing zero.

	* GNUmakefile.in ($(tree-share-prefix)/mf-link-tree link-mf-tree):
	Remove bashism in delete.

2006-10-25  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grobs.scm (all-grob-descriptions): set finger-code.

	* scm/translation-functions.scm (determine-frets-mf): flatten let*

	* scm/define-context-properties.scm
	(all-user-translation-properties): add maximumFretStretch property.

	* scm/translation-functions.scm (tunings): read and use maximumFretStretch.

	* lily/source-file.cc (get_counts): use multibyte variable.

	* scm/translation-functions.scm (determine-frets-mf): new
	function: compute fret numbers. 

	* scm/output-lib.scm (string-frets->description) new function.
	(fret-board::calc-stencil): new function

	* scm/fret-diagrams.scm (fret-diagram-verbose): update doc string.
